# pylandstats-notebooks

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  Snakefile  environment.yml  gradient-analysis.ipynb  overview.ipynb  postBuild  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: masks_arr.npy  vaud_g100_clc00_V18_5.tif  vaud_g100_clc12_V18_5a.tif
data/clc/: 00.tif  06.tif  12.tif  vaud_g100_clc06_V18_5a.tif
data/dem/: dem.dbf  dem.shp  dem.shx
data/fragstats/: vaud_g100_clc00_V18_5.land  vaud_g100_clc00_V18_5.patch
data/gmb/: g1a18.dbf  g1a18.shp  g1a18.shx
data/raw/clc/: bern_valais_g100_clc00.tif
data/raw/dem/: dem.gpkg
notebooks/: 00-overview.ipynb  01-landscape-analysis.ipynb  02-spatiotemporal-analysis.ipynb  03-gradient-analysis.ipynb  03-zonal-analysis.ipynb  04-spatiotemporal-buffer-analysis.ipynb  04-spatiotemporal-zonal-analysis.ipynb  04-zonal-statistics-example.ipynb  05-cluster-analysis.ipynb  05-spatial-signature-analysis.ipynb  06-multiscale-analysis.ipynb  06-proximity-draft.ipynb  A01-fragstats-comparison.ipynb  A01-fragstats-metrics-comparison.ipynb  A02-performance-notes.ipynb  A03-swisslandstats-preprocessing.ipynb  A04-elevation-zones.ipynb  A05-pylandstats-3-benchmark.ipynb  A06-bird-richness-preprocessing.ipynb  fragstats-comparison.ipynb  gradient-analysis.ipynb  overview.ipynb  pland-transects.tif
other/: metricsBenchmark.R
